[project]
name = "tvmi"
version = "1.0.0"
authors = [
  { name="Joseph DiPalma", email="jdipalma2@gmail.com" },
]
description = "TorchVision Multi-Image package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file="LICENSE"}

[project.urls]
Homepage = "https://github.com/jdipalma2/torchvision-multi-image"
Issues = "https://github.com/jdipalma2/torchvision-multi-image/issues"

[build-system]
requires = ["setuptools >= 75"]
build-backend = "setuptools.build_meta"
